# luogu-SRC-tool

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  copy_pyluogu.py  docker-compose.yml  e2e_output.txt  e2e_test.py  pyproject.toml  requirements.txt
examples/: 01_basic_login.py  02_manual_cookies.py  03_export_records.py  04_passed_problems.py
luogu_toolkit/: __init__.py  __main__.py  bundle.py  cli.py  cookie.py  fetch.py  login.py  syllabus_matcher.py  web.py
luogu_toolkit/_pyluogu/: NOTICE  __init__.py  api.py  api_helpers.py  async_api.py  errors.py  normalizers.py  request_helpers.py  static_api.py  transport.py  types.py
luogu_toolkit/_pyluogu/bits/: controller.py  decorators.py  strings.py  ultility.py
luogu_toolkit/templates/: bundle.html  data.html  index.html  login.html  status.html
n/: .dockerignore  .env  .env.example  .gitignore
n/._vjudge_report/: id2_report.html  id2_report.md
n/.dbg/: record-list-html.env  trae-debug-log-record-list-html.ndjson
n/.diag_vjudge_stuck/: db_path.txt  tasks_1781900368.db
n/.github/workflows/: release-push-pypi.yml  test-packaging.yml
n/.source_cache/1054015/: AT_abc238_b.json  AT_abc284_d.json  AT_abc286_d.json  AT_abc338_e.json  AT_arc174_a.json  B2001.json  B2002.json  B2005.json  B2007.json  B2008.json  B2009.json  B2010.json  B2011.json  B2017.json  B2018.json  B2025.json  B2028.json  B2029.json  B2033.json  B2034.json  B2036.json  B2038.json  B2071.json  B2077.json  B2120.json  B2143.json  B2144.json  B2147.json  B2164.json  B3611.json  B3612.json  B3613.json  B3614.json  B3616.json  B3617.json  B3619.json  B3620.json  B3621.json  B3622.json  B3623.json  (+909 more)
n/.source_cache/1351761/: AT_chokudai_S001_a.json  (+55 more)
tests/: test_cli.py  test_cookie.py  test_web.py
