[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luogu-toolkit"
version = "0.1.0"
description = "洛谷账号工具集 (登录 · 抓取 · 数据导出) - MIT"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "luogu-toolkit Contributors" }
]
keywords = ["luogu", "login", "scraper", "toolkit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
requires-python = ">=3.10"

# 运行时依赖 (核心: 登录 + cookie 落盘, _pyluogu 已内嵌)
dependencies = [
    "playwright>=1.45",
    "ddddocr>=1.5",
    "httpx>=0.27",            # _pyluogu 用
    "beautifulsoup4>=4.12",  # _pyluogu 用
    "flask>=3.0",             # web UI
]

# 完整功能依赖 (pyLuogu 已内嵌, 这里只列 _pyluogu 的依赖)
[project.optional-dependencies]
full = [
    "pyLuogu>=1.0",    # 可选, 内嵌版就够了, 这个是给真要拉上游的
]
web = ["flask>=3.0"]
fetch = []            # fetch 功能已内嵌, 不需要额外装
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/mine030788/luogu-toolkit"
Issues = "https://github.com/mine030788/luogu-toolkit/issues"

[project.scripts]
luogu-toolkit = "luogu_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["luogu_toolkit*"]

[tool.setuptools.package-data]
luogu_toolkit = ["templates/*.html"]
